# LabelDesigner

./: .gitignore  CMakeLists.txt  README.md
docs/: api_guide.md  architecture.md  plugin_guide.md
examples/: sample_label.json
resources/: resources.qrc
src/: main.cpp
src/core/file_manager/: file_manager.cpp  file_manager.h
src/core/label_info/: label_manager.cpp  label_manager.h
src/core/layout/: layout_engine.cpp  layout_engine.h
src/core/package_code/: counter_manager.cpp  counter_manager.h
src/models/: barcode_element.cpp  barcode_element.h  binding_info_element.cpp  binding_info_element.h  fixed_info_element.cpp  fixed_info_element.h  image_element.cpp  image_element.h  label_element.cpp  label_element.h  layout_cell.cpp  layout_cell.h  qrcode_element.cpp  qrcode_element.h  time_info_element.cpp  time_info_element.h
src/plugins/: plugin_interface.h  plugin_manager.cpp  plugin_manager.h
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/dialogs/: add_element_dialog.cpp  add_element_dialog.h  element_properties_dialog.cpp  element_properties_dialog.h
src/ui/widgets/: label_editor_widget.cpp  label_editor_widget.h  layout_designer_widget.cpp  layout_designer_widget.h  package_code_designer_widget.cpp  package_code_designer_widget.h  preview_widget.cpp  preview_widget.h
src/utils/: barcode_generator.cpp  barcode_generator.h  image_processor.cpp  image_processor.h  json_parser.cpp  json_parser.h  qrcode_generator.cpp  qrcode_generator.h
tests/: CMakeLists.txt  test_countermanager.cpp  test_filemanager.cpp  test_jsonparser.cpp  test_labelmanager.cpp
